# adaptive-learning-agent

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build-release.yml
docs/design/: 2026-07-10-agent-interview-handbook-design.md
docs/superpowers/plans/: 2026-06-30-ai-chat-layout.md  2026-06-30-llm-agent.md  2026-07-02-agent-depth.md  2026-07-02-tauri-desktop.md
docs/superpowers/specs/: 2026-06-30-ai-chat-layout-design.md  2026-06-30-layout-refactor-design.md  2026-06-30-llm-agent-design.md  2026-07-02-agent-depth-design.md  2026-07-02-tauri-desktop-app-design.md
eval/: RESULTS.md  config.local.json.example  run_eval.py  run_rag_eval.py  run_weight_eval.py
projects/DeepCTR-Torch/: .readthedocs.yaml  setup.py
projects/DeepCTR-Torch/deepctr_torch/: __init__.py  callbacks.py
projects/DeepCTR-Torch/examples/: run_dien.py  (+5 more)
resume/: .gitkeep  CLAUDE.md
skill-tree/: CLAUDE.md  README.md  docker-compose.yml
skill-tree/backend/: CLAUDE.md  Dockerfile  ai.py  chat_store.py  entry.py  larkpub.py  layout.py  main.py  progress.py  requirements.txt  skill-tree-backend.spec
skill-tree/data/: recommendation.json
skill-tree/desktop/: README.md
skill-tree/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
skill-tree/desktop/src-tauri/icons/: README.md
skill-tree/desktop/src-tauri/resources/: README.md
skill-tree/desktop/src-tauri/src/: main.rs
skill-tree/frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
skill-tree/scripts/: build-desktop.sh
skill-tree/tools/: render.py
skills/resume-editing/: SKILL.md
(+106 files in other folders)
